# cProgrammes

./: .gitignore  CMakeLists.txt  README.md  index.html  inversion.c  params.json  test.c
Binary Search Tree/: adding-node-in -a-binary-search-tree.c  deleting-a-node-in-a-binary-search-tree.c
General Algo/: binarySearch.c  factorial.c  fibbonaci.c  primeNumber.c
Linked List/: adding-node-to-end-of-a-linked-list.c  adding-node-to-start-of-a-linked-list.c  queue.c  removing-node-from-end-of-linked-list.c  removing-node-from-start-of-a-linked-list.c  reversal-of-linked-list.c  stack-using-queue.c  stack.c  string-comparison-represented-as-linked-list.c  string-comparison-represented-as-linked-list.cpp
Strings/: palincrome.c  reverse-string.c  string-Length.c  string-comparision.c  string-concatenation.c  string-copy.c  substring-comparision.c
backtracking/: nQueen.cpp  sudokuchecker.cpp
binary Tree/: LeafAtSameLevel.c  countLeaf.c  heightBalance.c  largest-path-sum-between-leaves.c  levelOrderTraversal.c  mirrorTree.c  rootLeafpath.c  treeWidth.c
binaryTree/: a.out  deleteBinaryTree.c  diameter.c  elementAtDistanceK.c  identicalTree.c  largest-path-sum-between-leaves.cpp  morric.c  remove-Node-With-Less-Sum.c  spiralLevelOrderTraversal.c
graphs/: bfs.c  bfs.out  dfs.c  dfs.out
sorting/: a.out  bubblesort.c  countsort.cpp  insertionSort.c  mergeSort.c
